# horse-pain-poc

./: .env.example  .gitignore  GATE.md  LICENSE  README.md  pyproject.toml  setup.sh
docs/: audit-followup-spec.md  gemini-integration.md  labeling-protocol-2026-05.md  lessons_learned.md  methodology-note-2026-05.md  methodology_discipline_pattern.md  phase10a_prelim_audit.md  phase3_auc_method.md  phase3_per_clip_correction.md  phase4_audit.md  phase5_audit.md  phase6_audit.md  phase7_audit.md  phase8a_audit.md  phase8b_audit.md  phase8c_audit.md  phase9_audit.md  preregistration_hashes.md  qwen-experiment-spec.md  qwen-fix-and-revalidate-spec.md  recording-protocol.md
notebooks/: 00_smoke_dlc_sample.ipynb  01_read_my_ears_replicate.ipynb  02_vjepa2_zeroshot.ipynb  03_xclip_zeroshot.ipynb  04_few_shot_rhpe_validation.ipynb  05_qwen_mlx_video.ipynb  99_colab_fallback.ipynb
outputs/: anchor_embeddings_53clips.npz  audit_followup_labels.jsonl  backbone_matrix_iter6_results.json  cloud_dlc_audit_footnotes.md  cloud_dlc_smoke_test_result.json  consistency_check_clips.txt  consistency_check_ground_truth.jsonl  consistency_check_results.jsonl  consistency_check_results.md  expected_diagnostic_minicpm_blink.json  eye_box_keymap_phase5.json  eye_box_keymap_phase5b.json  eye_boxes_phase5a.json  eye_boxes_phase5b.json  eye_crops_annotations.md  eye_crops_drift_log.jsonl  eye_crops_failed.txt  eye_crops_manifest.jsonl  eye_crops_phase6b_m15_manifest.jsonl  eye_crops_v2_manifest.jsonl  eye_crops_v3_m10_manifest.jsonl  eye_crops_v3_m15_manifest.jsonl  eye_crops_v3_m40_manifest.jsonl  eye_crops_v3_m80_manifest.jsonl  eye_crops_v4_dlc_broken_rule_manifest.jsonl  eye_crops_v4_dlc_manifest.jsonl  eye_crops_v4_ear_dlc_manifest.jsonl  eye_loso_results.PHASE5_REPRO_CHECK.json  eye_loso_results.PRE_FIX.json  eye_loso_results.json  eye_loso_results_phase4.json  eye_loso_results_phase4_ablation_A.json  eye_loso_results_phase4_ablation_B.json  eye_loso_results_phase5_primary.json  eye_loso_results_phase5_sens_margin_10.json  eye_loso_results_phase5_sens_margin_40.json  eye_loso_results_phase5_sens_margin_80.json  eye_loso_results_phase5_sens_rubric.json  eye_loso_results_phase6b.json  eye_loso_results_phase7.json  (+115 more)
tools/: dlc_inference.py  extract_vjepa2.py  eye_box_annotator.py  eye_crop_pipeline.py  eye_crop_pipeline_v2.py  eye_crop_pipeline_v3.py  eye_loso_lr.py  eye_loso_lr_phase4.py  eye_loso_lr_phase5.py  eye_loso_lr_phase6b.py  eye_loso_lr_phase7.py  eye_loso_lr_phase8b.py  eye_probe.py  eye_probe_blink_sanity.py  gemini_audit.py  minicpm_audit.py  (+28 more)
(+23 files in other folders)
