[project]
name = "horse-training-poc"
version = "0.0.1"
description = "Methodology-first PoC for automated RHpE single-behavior classification with V-JEPA-2 — open-source stack sanity check."
requires-python = ">=3.10,<3.12"
dependencies = [
    "deeplabcut[modelzoo]>=3.0.0rc14",
    "torch>=2.3",
    "torchvision",
    "huggingface_hub>=0.24",
    "transformers>=4.44",
    "opencv-python-headless>=4.10",
    "matplotlib>=3.7,<3.9",
    "numpy>=1.26,<2.1",
    "pandas>=2.2",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "yt-dlp>=2024.8",
    "ultralytics>=8.3",
    "gradio>=4.40",
    "webvtt-py>=0.5",
    "google-genai>=0.8",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
